--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "vue": "2.5.16",
     "vue-chartjs": "^3.4.0",
     "vue-firestore": "^0.2.9",
+    "vue-light-timeline": "^1.0.1",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
     "vue-template-compiler": "^2.5.3",
+    "vue2-animate": "^2.1.0",
     "vuejs-datepicker": "^1.5.3",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
