--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue": "2.5.16",
     "vue-chartjs": "^3.4.0",
     "vue-firestore": "^0.2.9",
+    "vue-js-modal": "^1.3.26",
     "vue-light-timeline": "^1.0.1",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
