--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "heroku-ssl-redirect": "0.0.4",
     "mailgun-js": "^0.21.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
