--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "2.5.16",
     "vue2-animate": "^2.1.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.11.3"
+    "webpack": "^3.8.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.0.0"
   }
 }
