--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-      "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-      "lint-fix": "eslint --ext .js,.vue --fix --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint-fix": "eslint --ext .js,.vue --fix --ignore-path .gitignore ."
   },
   "dependencies": {
     "nuxt": "^2.0.0",
@@ -20,7 +20,8 @@
     "bootstrap": "^4.1.3",
     "@nuxtjs/axios": "^5.3.6",
     "heroku-ssl-redirect": "0.0.4",
-    "vue2-animate": "^2.1.0"
+    "vue2-animate": "^2.1.0",
+    "vue-light-timeline": "^1.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
